After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753706 - rtp: some (de)payloaders are missing copying metadata.
rtp: some (de)payloaders are missing copying metadata.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-17 05:13 UTC by Hyunjun Ko
Modified: 2015-08-17 12:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtp: copy metadata in the (de)payloaders which is missed before (2.12 KB, patch)
2015-08-17 05:13 UTC, Hyunjun Ko
committed Details | Review
rtph265pay/depay: Copy metadata, but only the relevant ones (9.82 KB, patch)
2015-08-17 06:51 UTC, Hyunjun Ko
none Details | Review

Description Hyunjun Ko 2015-08-17 05:13:13 UTC
rtpg723pay : I guess it was mistake to call drop instead of copy
rtpgsmpay : I think copy_meta is missing
rtpklvpay : To be consistent, needs to call copy_meta with tag 0.
Comment 1 Hyunjun Ko 2015-08-17 05:13:49 UTC
Created attachment 309388 [details] [review]
rtp: copy metadata in the (de)payloaders which is missed before
Comment 2 Hyunjun Ko 2015-08-17 06:51:47 UTC
Created attachment 309389 [details] [review]
rtph265pay/depay: Copy metadata, but only the relevant ones

Not sure if I can use functions in gstrtputils.
Comment 3 Hyunjun Ko 2015-08-17 07:14:49 UTC
(In reply to Hyunjun from comment #2)
> Created attachment 309389 [details] [review] [review]
> rtph265pay/depay: Copy metadata, but only the relevant ones
> 
> Not sure if I can use functions in gstrtputils.

Oops, this is already done. Please ignore this patch.
Comment 4 Sebastian Dröge (slomo) 2015-08-17 12:13:22 UTC
commit 38d269f80d074f3077801fa43c8e90e7b1df27fc
Author: Hyunjun Ko <zzoon.ko@samsung.com>
Date:   Mon Aug 17 14:07:10 2015 +0900

    rtp: copy metadata in the (de)payloaders which is missed before
    
    https://bugzilla.gnome.org/show_bug.cgi?id=753706
Comment 5 Luis de Bethencourt 2015-08-17 12:27:51 UTC
Well done Hyunjun :)