rtp: copy metadata in the (de)payloaders which is missed before

https://bugzilla.gnome.org/show_bug.cgi?id=753706